compiling_error.txt
C:\Users\Derris\Documents\GitHub\cosc-a211-term-project-Urban158\NewmanGallowTest.cpp: In function 'void gallowDisplayStep1(char)':
C:\Users\Derris\Documents\GitHub\cosc-a211-term-project-Urban158\NewmanGallowTest.cpp:34:6: error: expected unqualified-id before '*'
 char '*';
      ^~~
